[tool.poetry]
name = "ml_framework"
version = "0.1.0"
description = "This is a framework to create ml based models"
authors = ["Kiran Narta <kirannarta@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.2.1"
scikit-learn = "^1.4.1"
seaborn = "^0.13.2"
keras = "^3.1.1"
Cython = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
